<resources>
    <string name="dailog_isSilence_1" formatted="false">You are banned to chat here by %s.</string>
    <string name="dailog_isSilence_0" formatted="false">You are unblocked here by %s.</string>
    <string name="app_name">Balala</string>
    <string name="hello_world">Group voice, only here!</string>
    <string name="action_settings">Setting</string>
    <string name="facebook_app_name">Balala</string>
    <string name="app_id">1515359222122159</string>
    <string name="loading">Loading...</string>
    <string name="UpData">Updata...</string>
    <string name="goto_mic">Connecting, waiting for a moment please.</string>
    <string name="pull_loadmore">No more data at the moment.</string>
    <string name="load_pic_err">Pic loading failed.</string>
    <string name="success">Succeed.</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="emptyStr" />
    <string name="tab_message">Message</string>
    <string name="tab_bar">Room</string>
    <string name="tab_discover">Discover</string>
    <string name="tab_me">Me</string>
    <string name="tab_discoverFragment">DiscoverFragment</string>
    <string name="tab_gold">Gold</string>
    <string name="tab_diamond">Diamond</string>
    <string name="tab_online">Online</string>
    <string name="tab_ranking">Ranking</string>
    <string name="tab_info">Info</string>
    <string name="tab_application">Applicant</string>
    <string name="barInfo">Room Info</string>
    <string name="room_rank_top_list_desc">Contribution to the list</string>
    <string name="email_register_email_address">Please input your email address.</string>
    <string name="phone_register_enter_your_phone">Please enter your phone number.</string>
    <string name="profile_nick_name_hint">Please add your nick name.</string>
    <string name="profile_birthday_hint">please add your birthday. </string>
    <string name="phone_register_click_for_code">Click for Code</string>
    <string name="phone_register_enter_the_phone_code">Please enter the code.</string>
    <string name="phone_register_setpassword">Please set a password.</string>
    <string name="title_activity_dynamic">DynamicActivity</string>
    <string name="title_activity_new_user">Register</string>
    <string name="title_activity_create_bar">Create your Room</string>
    <string name="title_activity_upbar">Room Expanding</string>
    <string name="title_activity_Report">Report</string>
    <string name="title_activity_online_list">Room info</string>
    <string name="title_activity_my_post">My post</string>
    <string name="title_activity_my_bar">My Room</string>
    <string name="title_activity_visitors">Visitors</string>
    <string name="title_activity_subscriptions">Subscriptions</string>
    <string name="button_submit">Submit</string>
    <string name="button_editor">Edit</string>
    <string name="button_next">Next</string>
    <string name="button_resend">Resend</string>
    <string name="button_confirm">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_release">Release</string>
    <string name="button_closed">Closed</string>
    <string name="button_close">Close</string>
    <string name="button_more">More</string>
    <string name="button_complete">Complete</string>
    <string name="button_myleceived">History</string>
    <string name="button_send">Send</string>
    <string name="button_finish">Finish</string>
    <string name="button_new_user">New User</string>
    <string name="button_login">Login</string>
    <string name="button_private_chat">Private chat</string>
    <string name="button_top_up">Top Up</string>
    <string name="button_large_bar">Large Room</string>
    <string name="button_save">Save</string>
    <string name="button_yes">Yes</string>
    <string name="button_disagree">No</string>
    <string name="button_Reconnection">Reconnection</string>
    <string name="reply">Reply</string>
    <string name="moment_details">Moment details</string>
    <string name="moment">Moment</string>
    <string name="comment">Comment</string>
    <string name="people">People</string>
    <string name="just">just</string>
    <string name="view_all">View all</string>
    <string name="input_complete">Leave your comment.</string>
    <string name="girls">Girls</string>
    <string name="date">Date</string>
    <string name="my_post">My post</string>
    <string name="input_id">Enter ID</string>
    <string name="red_myreceived">My received</string>
    <string name="red_sent">Sent</string>
    <string name="red_quantity">Quantity</string>
    <string name="red_enter_number">Enter number</string>
    <string name="red_total">Total</string>
    <string name="red_input_amount">Input amount</string>
    <string name="red_lucky_money">Lucky money</string>
    <string name="red_lucky_money_from_james_bond">Lucky money from james bond</string>
    <string name="red_gold">"Gold:"</string>
    <string name="red_better_an_empty">Better an empty purse than an empty head.</string>
    <string name="red_generosity_is_giving_more">Generosity is giving more than you can</string>
    <string name="red_people_come_when_coins_spread">People come when coins spread</string>
    <string name="red_you_are_richer_han_richer">You are richer than richer.</string>
    <string name="red_please_input_ampow_quantity">Please input Ampow quantity.</string>
    <string name="red_please_input_ampow_amount">Please input Ampow amount.</string>
    <string name="red_your_ampow_quantity_cant_less_than">Your Ampow quantity can not less than 3.</string>
    <string name="red_ampow_amount_can_not">Ampow amount can not less than Ampow quantity</string>
    <string name="red_ampow_random_amount">Ampow with random amount.</string>
    <string name="red_best_wishes">Best wishes!</string>
    <string name="red_best_luck">Better luck next time!</string>
    <string name="red_prepare_lucky_money">Prepare Ampow</string>
    <string name="red_for_out_tip">For out tip, only 1% of the coins will be deducted from your Ampow.</string>
    <string name="red_money">%1$s Gold</string>
    <string name="red_total_number_sent">Total Number Sent</string>
    <string name="red_lucky_money_from">Lucky money from </string>
    <string name="red_total_amount_should_more_then">Total amount should be more then 1000 gold</string>
    <string name="red_opened">Opened</string>
    <string name="open">Open</string>
    <string name="red_gold_2">,gold </string>
    <string name="red_welfare_x"> x </string>
    <string name="red_details">view details</string>
    <string name="task_title">Quest</string>
    <string name="task_sign">Check-in</string>
    <string name="task_receive">Receive</string>
    <string name="task_completed">Completed</string>
    <string name="task_accept">Accept</string>
    <string name="user_list_earn">Earn</string>
    <string name="user_list_gift">Gift</string>
    <string name="task_claim">Claim</string>
    <string name="task_verify">Verify</string>
    <string name="go">Go</string>
    <string name="task_invite">Invite</string>
    <string name="task_sign_in_balala">Check-in Balala</string>
    <string name="task_100_gold">100 Gold</string>
    <string name="task_500_gold">500 Gold</string>
    <string name="task_1000_gold">1000 Gold</string>
    <string name="task_2000_gold">2000 Gold</string>
    <string name="task_leave_your_footsteps_in_bar">Broadcast for over 10 mins</string>
    <string name="bind_account">Bind account</string>
    <string name="create_a_bar">Create a Room</string>
    <string name="leave_star_in_gp_comment">Leave 5-star in GP comment</string>
    <string name="search_balala_in_google_play">Search Balala in Google Play</string>
    <string name="id_of_your_invitor">ID of your Invitor</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="share_balala_to_facebook">Share Balala to facebook</string>
    <string name="no_post">No post</string>
    <string name="setting">Setting</string>
    <string name="my_account">My account</string>
    <string name="sound">Sound</string>
    <string name="about">About</string>
    <string name="logoup">Logout</string>
    <string name="feedback">FeedBack</string>
    <string name="copyright">Copyright©2015-2020 </string>
    <string name="copyright2">All Rights Reserved</string>
    <string name="agreement_lab">Terms of Use</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_err">The length of your old password is wrong.</string>
    <string name="new_password_err">The length of your new password is wrong.</string>
    <string name="new_and_old_pwd_err">New password can not be the same as your old one.</string>
    <string name="repeat_and_new_pwd_err">This password you input is different from the former one.</string>
    <string name="login_err">Your account is login in another device, you are forced to log out.</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="start_login">Start Login</string>
    <string name="repeat">Repeat</string>
    <string name="bind_facebook">Bind facebook</string>
    <string name="bind_phone">Bind phone</string>
    <string name="bind_phone_prompt">You’ve already bound your phone.</string>
    <string name="input_feedback_content">Please enter your Feedback.</string>
    <string name="for_more_information">For more information or have any feedback, please feel free to contact us.</string>
    <string name="verifying_code">Verifying code</string>
    <string name="country_code">+86</string>
    <string name="her_post">Her post</string>
    <string name="my">My</string>
    <string name="member">Member</string>
    <string name="share">Share</string>
    <string name="bill">Bill</string>
    <string name="her_bar">Her Bar</string>
    <string name="focus_success">Follow succeed</string>
    <string name="focus_fail">Follow failed</string>
    <string name="never_give_up_music">Never give up music!</string>
    <string name="her_album">Her album</string>
    <string name="chat">Chat</string>
    <string name="follow">Follow</string>
    <string name="please_input">Please input </string>
    <string name="please_input_nickname">Please input nickname</string>
    <string name="please_input_birthday">Select your Birthday.</string>
    <string name="click_record">Hold ‘Mic’ to record</string>
    <string name="tell_friends_who_are_you">Tell friends who are you, a quick introduction makes you more attractive.</string>
    <string name="my_following">Following</string>
    <string name="bound_check">Change</string>
    <string name="bind_check">Bind</string>
    <string name="bound">Bound</string>
    <string name="delete_item">Delete this item</string>
    <string name="sticky_top">Sticky on top</string>
    <string name="sign_read">Mark as read</string>
    <string name="sign_unread">Mark as unread</string>
    <string name="title_activity_send_dynamic">SendDynamicActivity</string>
    <string name="att_success">Followed</string>
    <string name="att_fail">Follow failed</string>
    <string name="cancel_focus_success">Unfollowed</string>
    <string name="cancel_focus">Unfollow</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nickname">Nickname</string>
    <string name="birthday">Birthday</string>
    <string name="input_your_nickname">Input your nickname</string>
    <string name="select_your_birthday">Select your birthday</string>
    <string name="by_proceeding_you_confirm">By proceeding you confirm that you accept Balala’s</string>
    <string name="terms_of_service">Terms of Service.</string>
</resources>