<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">
    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="49dp">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottomLinear"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_gravity="bottom|center"
        android:background="#f8f8f8"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#d0d0d0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignParentBottom="true"
            android:background="#f8f8f8"
            android:clickable="true"
            android:clipChildren="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/tabMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabMessage_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher"/>

                <TextView
                    android:id="@+id/tabMessage_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_message"
                    android:textColor="#b1b1b1"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabBar_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher"/>

                <TextView
                    android:id="@+id/tabBar_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_bar"
                    android:textColor="#b1b1b1"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabDiscover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabDiscover_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher"/>

                <TextView
                    android:id="@+id/tabDiscover_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_discover"
                    android:textColor="#b1b1b1"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tabMe_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:contentDescription="@null"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher"/>

                <TextView
                    android:id="@+id/tabMe_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_me"
                    android:textColor="#b1b1b1"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>

